--- a/_config.yml
+++ b/_config.yml
@@ -93,11 +93,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  name             : "감 없는 개발자"
+  avatar           : "/assets/images/profile.jpg"
+  bio              : "세계여행을 꿈꾸는 개발자"
   location         : "Somewhere"
-  email            :
+  email            : "thesin1989@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
