--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   avatar           : "/assets/images/profile.jpg"
   bio              : "여행을 꿈꾸는 개발자"
   location         : "Somewhere"
-  email            : "thesin1989@gmail.com"
+  email            :
   links:
         - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
