--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /about/
   - title: "Categories"
     url: /categories/
-  - title: "Travel"
-    url: /travel/
+  #- title: "Travel"
+  #  url: /travel/
   # - title: "Sitemap"
   #   url: /sitemap/
