블로그 수정

--- a/_config.yml
+++ b/_config.yml
@@ -279,3 +279,12 @@ defaults:
       comments: # true
       share: true
       related: true
+      
+ tipue_search:
+     include:
+         pages: false
+         collections: []
+     exclude:
+         files: [search.html, index.html, tags.html]
+         categories: []
+         tags: []
