On branch master  Your branch is up to date with 'origin/master'.
 Changes to be committed:
	modified:   _config.yml
	modified:   _posts/book/git/2020-05-18-progit-07.md
	new file:   assets/images/git07.PNG

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   :  true#, false (default)
+search                   : # true, false (default)
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
@@ -280,11 +280,3 @@ defaults:
       share: true
       related: true
       
- tipue_search:
-     include:
-         pages: false
-         collections: []
-     exclude:
-         files: [search.html, index.html, tags.html]
-         categories: []
-         tags: []
