코드워즈&운영체제

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,5 @@ main:
 
   - title: "Tags"
     url: /tags/
-  #  url: /travel/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Search"
+    url: /Search/
